# baron

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/jni/src/: agent.cpp  jni.cpp
example/probe/src/: main.cpp
include/baron/: baron.h
include/baron/impl/: class.h  field.h  jvm.h  method.h
include/baron/impl/env/: jni.h  jvmti.h
include/baron/impl/interface/: invoke.h  jvmti.h  native.h
include/baron/util/: util.h
src/: baron.cpp
src/impl/: class.cpp  field.cpp  jvm.cpp  method.cpp
src/impl/env/: jni.cpp  jvmti.cpp
src/impl/interface/invoke/: misc.cpp  thread.cpp
src/impl/interface/jvmti/: jvmti.cpp
src/impl/interface/native/: array.cpp  field.cpp  method.cpp  native.cpp  object.cpp
src/util/: util.cpp
